# ocp-release-mcp

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml
openshift_release_mcp/: __init__.py  server.py
